Added New Stuff. Still Rigid I think.

--- a/web/Input.html
+++ b/web/Input.html
@@ -10,30 +10,30 @@ and open the template in the editor.
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <form id="one" name="one" method="POST" action="ProcessInput">
+        <form id="one" name="one" method="POST" action="RectangleInput">
             <p>Rectangular Area Calculator </p>
             Length: <input type="text" name="length">
             <br>
             Width: <input type="text" name="width">
-            <input type="submit" value="Calculate" name="Rectangle">
+            <input type="submit" value="Calculate">
             <hr>
         </form>
 
-<!--        <form id="two" name="two" method="POST" action="ProcessInput"> 
+       <form id="two" name="two" method="POST" action="CircleInput"> 
             <p>Circle Area Calculator </p>
-            Radius: <input type="text" name="length">
-            <input type="submit" value="Calculate!">
+            Radius: <input type="text" name="radius">
+            <input type="submit" value="Calculate">
             <hr>
         </form>
 
 
-        <form id="three" name="three" method="POST" action="ProcessInput"> 
+        <form id="three" name="three" method="POST" action="TriangleInput"> 
             <p>Third Side of a Triangle Calculator </p>
             Side 1: <input type="text" name="length">
             <br>
             Side 2: <input type="text" name="width">
             <input type="submit" value="Calculate!">
             <hr>
-        </form>-->
+        </form>
     </body>
 </html>
