--- a/web/Input.html
+++ b/web/Input.html
@@ -1,9 +1,3 @@
-<!--
-To change this template, choose Tools | Templates
-and open the template in the editor.
--->
-<!DOCTYPE html>
-
 <html>
     <head>
         <title>Calculator</title>
@@ -11,29 +5,78 @@ and open the template in the editor.
     </head>
     <body>
         <form id="one" name="one" method="POST" action="RectangleInput">
-            <p>Rectangular Area Calculator </p>
-            Length: <input type="text" name="length">
-            <br>
-            Width: <input type="text" name="width">
-            <input type="submit" value="Calculate">
-            <hr>
+            <table border="1" width="230">
+                <tr>
+                    <td align="center">
+                        <p>Rectangular Area Calculator </p>
+                    </td>
+                </tr>
+                <tr>
+                    <td align="center">
+                        Length: <input type="text" name="length"> 
+                    </td>
+                </tr>
+                <tr>
+                    <td align="center">
+                        Width: <input type="text" name="width">
+                    </td>
+                </tr>
+                <tr>
+                    <td align="center">
+                        <input type="submit" value="Calculate">
+                    </td>
+                </tr>
+            </table>
+            <hr width="230" align="left">
         </form>
 
-       <form id="two" name="two" method="POST" action="CircleInput"> 
-            <p>Circle Area Calculator </p>
-            Radius: <input type="text" name="radius">
-            <input type="submit" value="Calculate">
-            <hr>
-        </form>
+        <form id="two" name="two" method="POST" action="CircleInput"> 
 
+            <table border="1" width="230">
+                <tr>
+                    <td align="center">
+                        <p>Circle Area Calculator </p>
+                    </td>
+                </tr>
+                <tr>
+                    <td align="center">
+                        Radius: <input type="text" name="radius">
+                    </td>
+                </tr>
+                <tr>
+                    <td align="center">
+                        <input type="submit" value="Calculate">
+                    </td>
+                </tr>
+            </table>
+            <hr width="230" align="left">
+        </form>
 
         <form id="three" name="three" method="POST" action="TriangleInput"> 
-            <p>Third Side of a Triangle Calculator </p>
-            Side 1: <input type="text" name="length">
-            <br>
-            Side 2: <input type="text" name="width">
-            <input type="submit" value="Calculate!">
-            <hr>
+
+            <table border="1" width="230">
+                <tr>
+                    <td align="center">
+                        <p>Third Side of a Triangle Calculator </p>
+                    </td>
+                </tr>
+                <tr>
+                    <td align="center">
+                        Side 1: <input type="text" name="length">
+                    </td>
+                </tr>
+                <tr>
+                    <td align="center">
+                        Side 2: <input type="text" name="width">
+                    </td>
+                </tr>
+                <tr>
+                    <td align="center">
+                        <input type="submit" value="Calculate!">
+                    </td>
+                </tr>
+            </table>
+            <hr width="230" align="left">
         </form>
     </body>
 </html>
