Added Strategy Pattern for Area Calculator.  Need to set up My Servlets to use the Strategy Pattern.

--- a/web/Input.html
+++ b/web/Input.html
@@ -57,7 +57,7 @@
             <table border="1" width="230">
                 <tr>
                     <td align="center">
-                        <p>Third Side of a Triangle Calculator </p>
+                        <p>Pythagoras' Theorem</p>
                     </td>
                 </tr>
                 <tr>
